# SOP

./: CMakeLists.txt  Makefile  Matrix.cpp  Matrix.h  Pawn.cpp  Pawn.h  main.cpp  mleko
